@@ -4,20 +4,24 @@ import com.google.maps.model.LatLng;
 import greencity.achievement.AchievementCalculation;
 import greencity.client.RestClient;
 import greencity.constant.AppConstant;
-import greencity.constant.EmailNotificationMessagesConstants;
 import greencity.constant.ErrorMessage;
 import greencity.dto.PageableAdvancedDto;
 import greencity.dto.PageableDto;
 import greencity.dto.event.AddEventDtoRequest;
 import greencity.dto.event.AddressDto;
 import greencity.dto.event.EventAttenderDto;
+import greencity.dto.event.EventAuthorDto;
 import greencity.dto.event.EventDateLocationDto;
 import greencity.dto.event.EventDto;
 import greencity.dto.event.EventVO;
 import greencity.dto.event.UpdateEventDto;
+import greencity.dto.event.UpdateEventRequestDto;
 import greencity.dto.filter.FilterEventDto;
 import greencity.dto.geocoding.AddressLatLngResponse;
+import greencity.dto.notification.LikeNotificationDto;
 import greencity.dto.search.SearchEventsDto;
+import greencity.dto.tag.TagDto;
+import greencity.dto.tag.TagUaEnDto;
 import greencity.dto.tag.TagVO;
 import greencity.dto.user.UserForListDto;
 import greencity.dto.user.UserVO;
@@ -27,91 +31,117 @@ import greencity.entity.event.Event;
 import greencity.entity.event.EventDateLocation;
 import greencity.entity.event.EventGrade;
 import greencity.entity.event.EventImages;
-import greencity.entity.event.Address;
-import greencity.enums.EventType;
-import greencity.enums.TagType;
-import greencity.enums.Role;
-import greencity.enums.AchievementCategoryType;
 import greencity.enums.AchievementAction;
-import greencity.enums.RatingCalculationEnum;
+import greencity.enums.AchievementCategoryType;
+import greencity.enums.EventType;
+import greencity.enums.NotificationType;
+import greencity.enums.Role;
+import greencity.enums.TagType;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UserHasNoPermissionToAccessException;
-import greencity.message.GeneralEmailMessage;
+import greencity.mapping.events.EventDateLocationDtoMapper;
 import greencity.rating.RatingCalculation;
 import greencity.repository.EventRepo;
-import greencity.repository.EventsSearchRepo;
+import greencity.repository.RatingPointsRepo;
 import greencity.repository.UserRepo;
+import jakarta.persistence.Tuple;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.locationtech.jts.geom.Coordinate;
-import org.locationtech.jts.geom.GeometryFactory;
-import org.locationtech.jts.geom.Point;
-import org.locationtech.jts.geom.PrecisionModel;
+import org.apache.commons.lang3.ObjectUtils;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.TypeToken;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+import java.math.BigDecimal;
 import java.security.Principal;
-import java.time.LocalDate;
+import java.sql.Date;
+import java.time.Duration;
+import java.time.Instant;
+import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
-
-import static greencity.constant.ErrorMessage.PAGE_NOT_FOUND;
+import static greencity.constant.EventTupleConstant.cityEn;
+import static greencity.constant.EventTupleConstant.cityUa;
+import static greencity.constant.EventTupleConstant.countComments;
+import static greencity.constant.EventTupleConstant.countryEn;
+import static greencity.constant.EventTupleConstant.countryUa;
+import static greencity.constant.EventTupleConstant.creationDate;
+import static greencity.constant.EventTupleConstant.currentUserGrade;
+import static greencity.constant.EventTupleConstant.description;
+import static greencity.constant.EventTupleConstant.dislikes;
+import static greencity.constant.EventTupleConstant.eventId;
+import static greencity.constant.EventTupleConstant.finishDate;
+import static greencity.constant.EventTupleConstant.formattedAddressEn;
+import static greencity.constant.EventTupleConstant.formattedAddressUa;
+import static greencity.constant.EventTupleConstant.grade;
+import static greencity.constant.EventTupleConstant.houseNumber;
+import static greencity.constant.EventTupleConstant.isFavorite;
+import static greencity.constant.EventTupleConstant.isOpen;
+import static greencity.constant.EventTupleConstant.isOrganizedByFriend;
+import static greencity.constant.EventTupleConstant.isRelevant;
+import static greencity.constant.EventTupleConstant.isSubscribed;
+import static greencity.constant.EventTupleConstant.languageCode;
+import static greencity.constant.EventTupleConstant.latitude;
+import static greencity.constant.EventTupleConstant.likes;
+import static greencity.constant.EventTupleConstant.longitude;
+import static greencity.constant.EventTupleConstant.onlineLink;
+import static greencity.constant.EventTupleConstant.organizerId;
+import static greencity.constant.EventTupleConstant.organizerName;
+import static greencity.constant.EventTupleConstant.regionEn;
+import static greencity.constant.EventTupleConstant.regionUa;
+import static greencity.constant.EventTupleConstant.startDate;
+import static greencity.constant.EventTupleConstant.streetEn;
+import static greencity.constant.EventTupleConstant.streetUa;
+import static greencity.constant.EventTupleConstant.tagId;
+import static greencity.constant.EventTupleConstant.tagName;
+import static greencity.constant.EventTupleConstant.title;
+import static greencity.constant.EventTupleConstant.titleImage;
+import static greencity.constant.EventTupleConstant.type;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class EventServiceImpl implements EventService {
+    private static final String DEFAULT_TITLE_IMAGE_PATH = AppConstant.DEFAULT_EVENT_IMAGES;
     private final EventRepo eventRepo;
     private final ModelMapper modelMapper;
+    private final EventDateLocationDtoMapper eventDateLocationDtoMapper;
     private final RestClient restClient;
     private final FileService fileService;
     private final TagsService tagService;
     private final GoogleApiService googleApiService;
     private final UserService userService;
-    private final EventsSearchRepo eventsSearchRepo;
-    private final NotificationService notificationService;
-    private static final String DEFAULT_TITLE_IMAGE_PATH = AppConstant.DEFAULT_EVENT_IMAGES;
     private final UserRepo userRepo;
     private final RatingCalculation ratingCalculation;
     private final AchievementCalculation achievementCalculation;
+    private final UserNotificationService userNotificationService;
+    private final RatingPointsRepo ratingPointsRepo;
 
-    private static final String FUTURE_EVENT = "FUTURE";
-    private static final String PAST_EVENT = "PAST";
-    private static final String ONLINE_EVENT = "ONLINE";
-    private static final String OFFLINE_EVENT = "OFFLINE";
-    private static final String OPEN_STATUS = "OPEN";
-    private static final String CLOSED_STATUS = "CLOSED";
-    private static final String JOINED_STATUS = "JOINED";
-    private static final String CREATED_STATUS = "CREATED";
-    private static final String SAVED_STATUS = "SAVED";
-    private static final String ECONOMIC_TAG = "ECONOMIC";
-    private static final String ENVIRONMENTAL_TAG = "ENVIRONMENTAL";
-    private static final String SOCIAL_TAG = "SOCIAL";
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public EventDto save(AddEventDtoRequest addEventDtoRequest, String email,
         MultipartFile[] images) {
-        addAddressToLocation(addEventDtoRequest.getDatesLocations());
+        validateEventRequest(addEventDtoRequest);
         Event toSave = modelMapper.map(addEventDtoRequest, Event.class);
-        toSave.setCreationDate(LocalDate.now());
         UserVO userVO = restClient.findByEmail(email);
         User organizer = modelMapper.map(userVO, User.class);
         toSave.setOrganizer(organizer);
+        toSave.setType(getEventType(toSave.getDates()));
         if (images != null && images.length > 0 && images[0] != null) {
             toSave.setTitleImage(fileService.upload(images[0]));
             List<EventImages> eventImages = new ArrayList<>();
@@ -135,49 +165,72 @@ public class EventServiceImpl implements EventService {
         Event savedEvent = eventRepo.save(toSave);
         achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.CREATE_EVENT,
             AchievementAction.ASSIGN);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.CREATE_EVENT, userVO);
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(organizer.getEmail())
-            .subject(EmailNotificationMessagesConstants.EVENT_CREATION_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.EVENT_CREATION_MESSAGE,
-                savedEvent.getTitle()))
-            .build());
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("CREATE_EVENT"), userVO);
+        userNotificationService.createNewNotification(userVO, NotificationType.EVENT_CREATED, savedEvent.getId(),
+            savedEvent.getTitle());
         return buildEventDto(savedEvent, organizer.getId());
     }
 
+    private EventType getEventType(List<EventDateLocation> dates) {
+        boolean hasOnlineEvent = false;
+        boolean hasOfflineEvent = false;
+
+        for (EventDateLocation date : dates) {
+            if (date.getOnlineLink() != null) {
+                hasOnlineEvent = true;
+            }
+            if (date.getAddress() != null) {
+                hasOfflineEvent = true;
+            }
+        }
+
+        if (hasOnlineEvent && hasOfflineEvent) {
+            return EventType.ONLINE_OFFLINE;
+        } else if (hasOnlineEvent) {
+            return EventType.ONLINE;
+        } else {
+            return EventType.OFFLINE;
+        }
+    }
+
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void delete(Long eventId, String email) {
         UserVO userVO = restClient.findByEmail(email);
-        Event toDelete =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event toDelete = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         List<String> eventImages = new ArrayList<>();
         eventImages.add(toDelete.getTitleImage());
         if (toDelete.getAdditionalImages() != null) {
             eventImages.addAll(toDelete.getAdditionalImages().stream().map(EventImages::getLink)
-                .collect(Collectors.toList()));
+                .toList());
         }
 
         if (toDelete.getOrganizer().getId().equals(userVO.getId()) || userVO.getRole() == Role.ROLE_ADMIN) {
             deleteImagesFromServer(eventImages);
-            Set<String> attendersEmails =
-                toDelete.getAttenders().stream().map(User::getEmail).collect(Collectors.toSet());
-            notificationService.sendEmailNotification(
-                attendersEmails,
-                EmailNotificationMessagesConstants.EVENT_CANCELED_SUBJECT,
-                String.format(EmailNotificationMessagesConstants.EVENT_CANCELED_MESSAGE, toDelete.getTitle()));
+            List<UserVO> userVOList = toDelete.getAttenders().stream()
+                .map(user -> modelMapper.map(user, UserVO.class))
+                .collect(Collectors.toList());
+            userNotificationService.createNotificationForAttenders(userVOList, toDelete.getTitle(),
+                NotificationType.EVENT_CANCELED, null);
             eventRepo.delete(toDelete);
         } else {
             throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.CREATE_EVENT, AchievementAction.DELETE);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.UNDO_CREATE_EVENT, userVO);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_CREATE_EVENT"), userVO);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public EventDto getEvent(Long eventId, Principal principal) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         if (principal != null) {
             User currentUser = modelMapper.map(restClient.findByEmail(principal.getName()), User.class);
             return buildEventDto(event, currentUser.getId());
@@ -185,201 +238,68 @@ public class EventServiceImpl implements EventService {
         return buildEventDto(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public PageableAdvancedDto<EventDto> getAll(Pageable page, Principal principal) {
-        Page<Event> events = eventRepo.findAllByOrderByIdDesc(page);
-
-        if (principal != null) {
-            User user = modelMapper.map(restClient.findByEmail(principal.getName()), User.class);
-            return buildPageableAdvancedDto(events, user.getId());
+    public PageableAdvancedDto<EventDto> getEvents(Pageable page, FilterEventDto filterEventDto, Long userId) {
+        if (userId != null) {
+            restClient.findById(userId);
         }
-        return buildPageableAdvancedDto(events);
-    }
 
-    @Override
-    public PageableAdvancedDto<EventDto> getEvents(Pageable page, Principal principal, FilterEventDto filterEventDto,
-        String title) {
-        if (Objects.isNull(filterEventDto)) {
-            return getAll(page, principal);
+        Page<Long> eventIds = eventRepo.findEventsIds(page, filterEventDto, userId);
+
+        if (page.getPageNumber() >= eventIds.getTotalPages() && eventIds.getTotalPages() > 0) {
+            throw new BadRequestException(
+                String.format(ErrorMessage.PAGE_NOT_FOUND_MESSAGE, page.getPageNumber(), eventIds.getTotalPages()));
         }
-        return getAllFiltered(principal, page, filterEventDto, title);
-    }
 
-    private PageableAdvancedDto<EventDto> getAllFiltered(Principal principal, Pageable page,
-        FilterEventDto filterEventDto, String title) {
-        List<Event> events = title == null ? eventRepo.findAll() : eventRepo.findAllByTitleContainingIgnoreCase(title);
-
-        validatePageNumber(events, page);
-
-        return principal != null
-            ? getFilteredForLoggedInUser(events, page, principal, filterEventDto)
-            : getFilteredForAnonymousUser(events, page, filterEventDto);
-    }
-
-    private void validatePageNumber(List<Event> events, Pageable page) {
-        int pageNumber = page.getPageNumber();
-        int totalPages = (int) Math.ceil((double) events.size() / (double) page.getPageSize());
-
-        if (pageNumber > totalPages) {
-            throw new NotFoundException(PAGE_NOT_FOUND + totalPages);
+        List<Tuple> tuples;
+        if (userId != null) {
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent(), userId);
+        } else {
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent());
         }
+        return buildPageableAdvancedDto(eventIds, tuples, page);
     }
 
-    private PageableAdvancedDto<EventDto> getFilteredForLoggedInUser(List<Event> events, Pageable page,
-        Principal principal, FilterEventDto filterEventDto) {
-        long userId = modelMapper.map(restClient.findByEmail(principal.getName()), User.class).getId();
-        events = getAllFilteredAndSorted(events, userId, filterEventDto);
-        validatePageNumber(events, page);
-        Page<Event> eventPage = new PageImpl<>(getEventsForCurrentPage(page, events), page, events.size());
-        return buildPageableAdvancedDto(eventPage, userId);
-    }
-
-    private PageableAdvancedDto<EventDto> getFilteredForAnonymousUser(List<Event> events, Pageable page,
-        FilterEventDto filterEventDto) {
-        events = getAllFilteredAndSorted(events, null, filterEventDto);
-        validatePageNumber(events, page);
-        Page<Event> eventPage = new PageImpl<>(getEventsForCurrentPage(page, events), page, events.size());
-        return buildPageableAdvancedDto(eventPage);
-    }
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public PageableAdvancedDto<EventDto> getAllUserEvents(
-        Pageable page, String email, String userLatitude, String userLongitude, String eventType) {
-        User attender = modelMapper.map(restClient.findByEmail(email), User.class);
-        List<Event> events = sortUserEventsByEventType(eventType, attender, userLatitude, userLongitude);
-        Page<Event> eventPage = new PageImpl<>(getEventsForCurrentPage(page, events), page, events.size());
-        return buildPageableAdvancedDto(eventPage, attender.getId());
-    }
-
-    @Override
-    public PageableAdvancedDto<EventDto> getAllFavoriteEventsByUser(Pageable page, String email) {
-        User user = modelMapper.map(restClient.findByEmail(email), User.class);
-        Page<Event> events = eventRepo.findAllFavoritesByUser(user.getId(), page);
-        return buildPageableAdvancedDto(events, user.getId());
-    }
-
-    @Override
-    public Set<AddressDto> getAllEventsAddresses() {
-        return eventRepo.findAllEventsAddresses().stream()
-            .map(eventAddress -> modelMapper.map(eventAddress, AddressDto.class))
-            .collect(Collectors.toSet());
-    }
-
-    private List<Event> getEventsForCurrentPage(Pageable page, List<Event> allEvents) {
-        int startIndex = page.getPageNumber() * page.getPageSize();
-        int endIndex = Math.min(startIndex + page.getPageSize(), allEvents.size());
-        return allEvents.subList(startIndex, endIndex);
-    }
-
-    private List<Event> sortUserEventsByEventType(
-        String eventType, User attender, String userLatitude, String userLongitude) {
-        if (StringUtils.isNotBlank(eventType)) {
-            if (ONLINE_EVENT.equalsIgnoreCase(eventType)) {
-                return getOnlineUserEventsSortedByDate(attender);
-            }
-            if (OFFLINE_EVENT.equalsIgnoreCase(eventType)) {
-                return (StringUtils.isNotBlank(userLatitude) && StringUtils.isNotBlank(userLongitude))
-                    ? getOfflineUserEventsSortedByUserLocation(attender, userLatitude, userLongitude)
-                    : getOfflineUserEventsSortedByDate(attender);
-            } else {
-                throw new BadRequestException(ErrorMessage.INVALID_EVENT_TYPE);
-            }
+    public PageableAdvancedDto<EventDto> getEventsManagement(Pageable page, FilterEventDto filterEventDto,
+        Long userId) {
+        if (userId != null) {
+            restClient.findById(userId);
         }
-        return eventRepo.findAllByAttender(attender.getId()).stream().sorted(getComparatorByDates())
-            .collect(Collectors.toList());
+
+        Page<Long> eventIds = eventRepo.findEventsIdsManagement(page, filterEventDto, userId);
+        List<Tuple> tuples;
+        if (userId != null) {
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent(), userId);
+        } else {
+            tuples = eventRepo.loadEventDataByIds(eventIds.getContent());
+        }
+        return buildPageableAdvancedDto(eventIds, tuples, page);
     }
 
-    private List<Event> getOnlineUserEventsSortedByDate(User attender) {
-        return eventRepo.findAllByAttender(attender.getId()).stream()
-            .filter(event -> event.getEventType().equals(EventType.ONLINE)
-                || event.getEventType().equals(EventType.ONLINE_OFFLINE))
-            .sorted(getComparatorByDates())
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> getOfflineUserEventsSortedByDate(User attender) {
-        return eventRepo.findAllByAttender(attender.getId()).stream()
-            .filter(event -> event.getEventType().equals(EventType.OFFLINE)
-                || event.getEventType().equals(EventType.ONLINE_OFFLINE))
-            .sorted(getComparatorByDates())
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> getOfflineUserEventsSortedByUserLocation(
-        User attender, String userLatitude, String userLongitude) {
-        List<Event> eventsFurtherSorted = eventRepo.findAllByAttender(attender.getId()).stream()
-            .filter(event -> event.getEventType().equals(EventType.OFFLINE)
-                || event.getEventType().equals(EventType.ONLINE_OFFLINE))
-            .sorted(getComparatorByDistance(Double.parseDouble(userLatitude), Double.parseDouble(userLongitude)))
-            .filter(Event::isRelevant)
-            .collect(Collectors.toList());
-        List<Event> eventsPassed = getOfflineUserEventsSortedByDate(attender).stream()
-            .filter(event -> !event.isRelevant())
-            .collect(Collectors.toList());
-        eventsFurtherSorted.addAll(eventsPassed);
-        return eventsFurtherSorted;
-    }
-
-    private Comparator<Event> getComparatorByDistance(final double userLatitude, final double userLongitude) {
-        return (e1, e2) -> {
-            double distance1 = calculateDistanceBetweenUserAndEventCoordinates(userLatitude, userLongitude,
-                Objects.requireNonNull(e1.getDates().get(e1.getDates().size() - 1)
-                    .getAddress()).getLatitude(),
-                Objects.requireNonNull(e1.getDates().get(e1.getDates().size() - 1)
-                    .getAddress()).getLongitude());
-            double distance2 = calculateDistanceBetweenUserAndEventCoordinates(userLatitude, userLongitude,
-                Objects.requireNonNull(e2.getDates().get(e2.getDates().size() - 1)
-                    .getAddress()).getLatitude(),
-                Objects.requireNonNull(e2.getDates().get(e2.getDates().size() - 1)
-                    .getAddress()).getLongitude());
-            return Double.compare(distance1, distance2);
-        };
-    }
-
-    private Comparator<Event> getComparatorByDates() {
-        return (e1, e2) -> e2.getDates().get(e2.getDates().size() - 1).getStartDate()
-            .compareTo(e1.getDates().get(e1.getDates().size() - 1).getStartDate());
-    }
-
-    private double calculateDistanceBetweenUserAndEventCoordinates(
-        double userLatitude, double userLongitude, double eventLatitude, double eventLongitude) {
-        GeometryFactory geometryFactory = new GeometryFactory(new PrecisionModel(), 4326);
-        Point userGeoPoint = geometryFactory.createPoint(new Coordinate(userLongitude, userLatitude));
-        Point eventGeoPoint = geometryFactory.createPoint(new Coordinate(eventLongitude, eventLatitude));
-        return userGeoPoint.distance(eventGeoPoint);
-    }
-
-    @Override
-    public PageableAdvancedDto<EventDto> getEventsCreatedByUser(Pageable page, String email) {
-        User attender = modelMapper.map(restClient.findByEmail(email), User.class);
-        Page<Event> events = eventRepo.findEventsByOrganizer(page, attender.getId());
-        return buildPageableAdvancedDto(events, attender.getId());
-    }
-
-    @Override
-    public PageableAdvancedDto<EventDto> getRelatedToUserEvents(Pageable page, String email) {
-        User attender = modelMapper.map(restClient.findByEmail(email), User.class);
-        Page<Event> events = eventRepo.findRelatedEventsByUser(page, attender.getId());
-        return buildPageableAdvancedDto(events, attender.getId());
-    }
-
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void addAttender(Long eventId, String email) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         UserVO userVO = restClient.findByEmail(email);
         User currentUser = modelMapper.map(userVO, User.class);
         checkAttenderToJoinTheEvent(event, currentUser);
         event.getAttenders().add(currentUser);
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.JOIN_EVENT, AchievementAction.ASSIGN);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.JOIN_EVENT, userVO);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("JOIN_EVENT"), userVO);
         eventRepo.save(event);
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(event.getOrganizer().getEmail())
-            .subject(EmailNotificationMessagesConstants.EVENT_JOINED_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.EVENT_JOINED_MESSAGE, currentUser.getName()))
-            .build());
+        userNotificationService.createNotification(modelMapper.map(event.getOrganizer(), UserVO.class), userVO,
+            NotificationType.EVENT_JOINED, eventId, event.getTitle());
     }
 
     private void checkAttenderToJoinTheEvent(Event event, User user) {
@@ -393,19 +313,25 @@ public class EventServiceImpl implements EventService {
         }
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void removeAttender(Long eventId, String email) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         UserVO userVO = restClient.findByEmail(email);
         event.setAttenders(event.getAttenders().stream().filter(user -> !user.getId().equals(userVO.getId()))
             .collect(Collectors.toSet()));
         achievementCalculation.calculateAchievement(userVO,
             AchievementCategoryType.JOIN_EVENT, AchievementAction.DELETE);
-        ratingCalculation.ratingCalculation(RatingCalculationEnum.UNDO_JOIN_EVENT, userVO);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_JOIN_EVENT"), userVO);
         eventRepo.save(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void addToFavorites(Long eventId, String email) {
         Event event = eventRepo.findById(eventId)
@@ -422,6 +348,9 @@ public class EventServiceImpl implements EventService {
         eventRepo.save(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public void removeFromFavorites(Long eventId, String email) {
         Event event = eventRepo.findById(eventId)
@@ -441,6 +370,9 @@ public class EventServiceImpl implements EventService {
         eventRepo.save(event);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public PageableAdvancedDto<EventDto> searchEventsBy(Pageable paging, String query) {
         Page<Event> page = eventRepo.searchEventsBy(paging, query);
@@ -449,12 +381,13 @@ public class EventServiceImpl implements EventService {
 
     /**
      * {@inheritDoc}
-     *
-     * @return EventDto
      */
     @Override
     @Transactional
-    public EventDto update(UpdateEventDto eventDto, String email, MultipartFile[] images) {
+    public EventDto update(UpdateEventRequestDto eventDtoRequest, String email, MultipartFile[] images) {
+        UpdateEventDto eventDto = modelMapper.map(eventDtoRequest, UpdateEventDto.class);
+        checkingEqualityDateTimeInEventDateLocationDto(eventDto.getDatesLocations());
+
         Event toUpdate = eventRepo.findById(eventDto.getId())
             .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         User organizer = modelMapper.map(restClient.findByEmail(email), User.class);
@@ -467,14 +400,18 @@ public class EventServiceImpl implements EventService {
         if (findLastEventDateTime(toUpdate).isBefore(ZonedDateTime.now())) {
             throw new BadRequestException(ErrorMessage.EVENT_IS_FINISHED);
         }
+        List<UserVO> userVOList = toUpdate.getAttenders().stream()
+            .map(user -> modelMapper.map(user, UserVO.class))
+            .collect(Collectors.toList());
+        if (toUpdate.getTitle().equals(eventDto.getTitle())) {
+            userNotificationService.createNotificationForAttenders(userVOList, toUpdate.getTitle(),
+                NotificationType.EVENT_UPDATED, toUpdate.getId());
+        } else {
+            userNotificationService.createNotificationForAttenders(userVOList, toUpdate.getTitle(),
+                NotificationType.EVENT_NAME_UPDATED, toUpdate.getId(), eventDto.getTitle());
+        }
         enhanceWithNewData(toUpdate, eventDto, images);
         Event updatedEvent = eventRepo.save(toUpdate);
-        Set<String> emailsToNotify = toUpdate.getAttenders().stream().map(User::getEmail).collect(Collectors.toSet());
-        emailsToNotify.add(organizer.getEmail());
-        notificationService.sendEmailNotification(
-            emailsToNotify,
-            EmailNotificationMessagesConstants.EVENT_UPDATED_SUBJECT,
-            String.format(EmailNotificationMessagesConstants.EVENT_UPDATED_MESSAGE, toUpdate.getTitle()));
         return buildEventDto(updatedEvent, organizer.getId());
     }
 
@@ -483,18 +420,22 @@ public class EventServiceImpl implements EventService {
      */
     @Override
     public void rateEvent(Long eventId, String email, int grade) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
-        User currentUser = modelMapper.map(restClient.findByEmail(email), User.class);
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        User currentUser = userRepo.findByEmail(email)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + email));
 
+        if (event.getOrganizer().getId().equals(currentUser.getId())) {
+            throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_RIGHTS_TO_RATE_EVENT);
+        }
         if (findLastEventDateTime(event).isAfter(ZonedDateTime.now())) {
             throw new BadRequestException(ErrorMessage.EVENT_IS_NOT_FINISHED);
         }
-        if (!event.getAttenders().stream().map(User::getId).collect(Collectors.toList())
+        if (!event.getAttenders().stream().map(User::getId).toList()
             .contains(currentUser.getId())) {
             throw new BadRequestException(ErrorMessage.YOU_ARE_NOT_EVENT_SUBSCRIBER);
         }
-        if (event.getEventGrades().stream().map(eventGrade -> eventGrade.getUser().getId()).collect(Collectors.toList())
+        if (event.getEventGrades().stream().map(eventGrade -> eventGrade.getUser().getId()).toList()
             .contains(currentUser.getId())) {
             throw new BadRequestException(ErrorMessage.HAVE_ALREADY_RATED);
         }
@@ -506,14 +447,20 @@ public class EventServiceImpl implements EventService {
             calculateUserEventOrganizerRating(event.getOrganizer()));
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public Set<EventAttenderDto> getAllEventAttenders(Long eventId) {
-        Event event =
-            eventRepo.findById(eventId).orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
         return event.getAttenders().stream().map(attender -> modelMapper.map(attender, EventAttenderDto.class))
             .collect(Collectors.toSet());
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     public EventVO findById(Long eventId) {
         Event event = eventRepo.findById(eventId)
@@ -548,7 +495,6 @@ public class EventServiceImpl implements EventService {
         if (updateEventDto.getIsOpen() != null) {
             toUpdate.setOpen(updateEventDto.getIsOpen());
         }
-
         if (updateEventDto.getTags() != null) {
             toUpdate.setTags(modelMapper.map(tagService
                 .findTagsWithAllTranslationsByNamesAndType(updateEventDto.getTags(), TagType.EVENT),
@@ -563,26 +509,53 @@ public class EventServiceImpl implements EventService {
             eventRepo.deleteEventDateLocationsByEventId(toUpdate.getId());
             toUpdate.setDates(updateEventDto.getDatesLocations().stream()
                 .map(d -> modelMapper.map(d, EventDateLocation.class))
-                .map(d -> {
-                    d.setEvent(toUpdate);
-                    return d;
-                })
+                .map(location -> setEventToEventDateLocation(location, toUpdate))
                 .collect(Collectors.toList()));
+            toUpdate.setType(getEventType(toUpdate.getDates()));
         }
     }
 
+    private EventDateLocation setEventToEventDateLocation(EventDateLocation location, Event e) {
+        return location.setEvent(e);
+    }
+
     private void updateImages(Event toUpdate, UpdateEventDto updateEventDto, MultipartFile[] images) {
+        List<String> additionalImages = updateEventDto.getAdditionalImages();
+        List<String> imagesToDelete = additionalImages == null || additionalImages.isEmpty()
+            ? eventRepo.findAllImagesLinksByEventId(toUpdate.getId())
+            : getImagesLinksToDelete(eventRepo.findAllImagesLinksByEventId(toUpdate.getId()), additionalImages);
         eventRepo.deleteEventAdditionalImagesByEventId(updateEventDto.getId());
-        if (ArrayUtils.isEmpty(images) && updateEventDto.getImagesToDelete() == null) {
+        checkTitleImageInImagesToDelete(updateEventDto, imagesToDelete);
+        if (ArrayUtils.isEmpty(images) && imagesToDelete.isEmpty()) {
             changeOldImagesWithoutRemovingAndAdding(toUpdate, updateEventDto);
         } else if (images == null || images.length == 0) {
-            deleteOldImages(toUpdate, updateEventDto);
-        } else if (updateEventDto.getImagesToDelete() == null) {
+            deleteOldImages(toUpdate, updateEventDto, imagesToDelete);
+        } else if (imagesToDelete.isEmpty()) {
             addNewImages(toUpdate, updateEventDto, images);
         } else {
-            deleteImagesFromServer(updateEventDto.getImagesToDelete());
+            deleteImagesFromServer(imagesToDelete);
             addNewImages(toUpdate, updateEventDto, images);
         }
+    }
+
+    private void checkTitleImageInImagesToDelete(UpdateEventDto updateEventDto, List<String> imagesToDelete) {
+        String titleImage = updateEventDto.getTitleImage();
+
+        if (imagesToDelete != null && titleImage != null && imagesToDelete.contains(titleImage)) {
+            List<String> additionalImages = new ArrayList<>(updateEventDto.getAdditionalImages());
+            if (!additionalImages.isEmpty()) {
+                updateEventDto.setTitleImage(additionalImages.removeFirst());
+                updateEventDto.setAdditionalImages(additionalImages);
+            } else {
+                updateEventDto.setTitleImage(null);
+            }
+        }
+    }
+
+    public static List<String> getImagesLinksToDelete(List<String> existingLinks, List<String> newLinks) {
+        return existingLinks.stream()
+            .filter(existingLink -> !newLinks.contains(existingLink))
+            .collect(Collectors.toList());
     }
 
     private void changeOldImagesWithoutRemovingAndAdding(Event toUpdate, UpdateEventDto updateEventDto) {
@@ -592,15 +565,16 @@ public class EventServiceImpl implements EventService {
             toUpdate.setTitleImage(DEFAULT_TITLE_IMAGE_PATH);
         }
         if (updateEventDto.getAdditionalImages() != null) {
-            updateEventDto.getAdditionalImages().forEach(img -> toUpdate
-                .setAdditionalImages(List.of(EventImages.builder().link(img).event(toUpdate).build())));
+            toUpdate.setAdditionalImages(updateEventDto.getAdditionalImages().stream()
+                .map(url -> EventImages.builder().event(toUpdate).link(url).build())
+                .collect(Collectors.toList()));
         } else {
             toUpdate.setAdditionalImages(null);
         }
     }
 
-    private void deleteOldImages(Event toUpdate, UpdateEventDto updateEventDto) {
-        deleteImagesFromServer(updateEventDto.getImagesToDelete());
+    private void deleteOldImages(Event toUpdate, UpdateEventDto updateEventDto, List<String> imagesToDelete) {
+        deleteImagesFromServer(imagesToDelete);
         if (updateEventDto.getTitleImage() != null) {
             toUpdate.setTitleImage(updateEventDto.getTitleImage());
             if (updateEventDto.getAdditionalImages() != null) {
@@ -641,9 +615,43 @@ public class EventServiceImpl implements EventService {
         }
     }
 
+    private void validateEventRequest(AddEventDtoRequest addEventDtoRequest) {
+        checkingEqualityDateTimeInEventDateLocationDto(addEventDtoRequest.getDatesLocations());
+        if (!validateCoordinates(addEventDtoRequest.getDatesLocations())) {
+            throw new BadRequestException(ErrorMessage.INVALID_COORDINATES);
+        }
+        addAddressToLocation(addEventDtoRequest.getDatesLocations());
+    }
+
+    private boolean isValidCoordinate(double latitude, double longitude) {
+        return Math.abs(latitude) <= 90 && Math.abs(longitude) <= 180;
+    }
+
+    public boolean validateCoordinates(List<EventDateLocationDto> eventDateLocationDtos) {
+        for (EventDateLocationDto eventDateLocationDto : eventDateLocationDtos) {
+            AddressDto coordinates = eventDateLocationDto.getCoordinates();
+            EventType eventType = getEventType(eventDateLocationDtoMapper.mapAllToList(eventDateLocationDtos));
+
+            if (EventType.ONLINE == eventType) {
+                return true;
+            }
+            if (Objects.isNull(coordinates) || Objects.isNull(coordinates.getLatitude())
+                || Objects.isNull(coordinates.getLongitude())) {
+                return false;
+            }
+
+            double latitude = coordinates.getLatitude();
+            double longitude = coordinates.getLongitude();
+
+            if (!isValidCoordinate(latitude, longitude)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
     private void addAddressToLocation(List<EventDateLocationDto> eventDateLocationDtos) {
-        eventDateLocationDtos
-            .stream()
+        eventDateLocationDtos.stream()
             .filter(eventDateLocationDto -> Objects.nonNull(eventDateLocationDto.getCoordinates()))
             .forEach(eventDateLocationDto -> {
                 AddressDto addressDto = eventDateLocationDto.getCoordinates();
@@ -654,200 +662,7 @@ public class EventServiceImpl implements EventService {
     }
 
     private ZonedDateTime findLastEventDateTime(Event event) {
-        return Collections
-            .max(event.getDates().stream().map(EventDateLocation::getFinishDate).collect(Collectors.toList()));
-    }
-
-    private List<Event> getAllFilteredAndSorted(
-        List<Event> allEvents, Long userId, FilterEventDto filterEventDto) {
-        List<Event> filtered = getFilteredByEventTimeAndCitiesAndTags(allEvents, filterEventDto);
-
-        if (CollectionUtils.isNotEmpty(filterEventDto.getStatuses())) {
-            if (userId != null) {
-                filtered = filterByAllStatuses(filtered, filterEventDto.getStatuses(), userId);
-            } else {
-                filtered = filterByStatusOpenClosed(filtered, filterEventDto.getStatuses());
-            }
-        }
-        return getSortedListByEventId(filtered);
-    }
-
-    private List<Event> getFilteredByEventTimeAndCitiesAndTags(List<Event> allEvents, FilterEventDto filterEventDto) {
-        List<Event> filtered = getEventsByEventTimeCondition(allEvents, filterEventDto.getEventTime());
-
-        if (CollectionUtils.isNotEmpty(filterEventDto.getCities())) {
-            filtered = filterByLocation(filtered, filterEventDto.getCities());
-        }
-        if (CollectionUtils.isNotEmpty(filterEventDto.getTags())) {
-            filtered = filterByTags(filtered, filterEventDto.getTags());
-        }
-        return filtered;
-    }
-
-    private List<Event> getEventsByEventTimeCondition(List<Event> allEvents, List<String> eventTimes) {
-        return (CollectionUtils.isNotEmpty(eventTimes))
-            ? filterByTime(allEvents, eventTimes)
-            : allEvents;
-    }
-
-    private List<Event> filterByTime(List<Event> events, List<String> eventTimes) {
-        List<Event> filteredByTime = new ArrayList<>();
-        for (String time : eventTimes) {
-            if (FUTURE_EVENT.equalsIgnoreCase(time)) {
-                filteredByTime.addAll(getFutureEvents(events));
-            }
-            if (PAST_EVENT.equalsIgnoreCase(time)) {
-                filteredByTime.addAll(getPastEvents(events));
-            }
-        }
-        return filteredByTime;
-    }
-
-    private List<Event> filterByLocation(List<Event> events, List<String> locations) {
-        return events.stream()
-            .filter(event -> event.getDates().stream()
-                .map(EventDateLocation::getAddress)
-                .filter(Objects::nonNull)
-                .map(Address::getCityEn)
-                .anyMatch(locations::contains))
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> filterByAllStatuses(List<Event> events, List<String> statuses, Long userId) {
-        List<Event> filteredByStatus = new ArrayList<>();
-        for (String status : statuses) {
-            if (OPEN_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getOpenEvents(events));
-            }
-            if (CLOSED_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getClosedEvents(events));
-            }
-            if (JOINED_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getJoinedEvents(events, userId));
-            }
-            if (CREATED_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getCreatedEvents(events, userId));
-            }
-            if (SAVED_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getSavedEvents(events, userId));
-            }
-        }
-        return filteredByStatus;
-    }
-
-    private List<Event> filterByStatusOpenClosed(List<Event> events, List<String> statuses) {
-        List<Event> filteredByStatus = new ArrayList<>();
-        for (String status : statuses) {
-            if (OPEN_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getOpenEvents(events));
-            }
-            if (CLOSED_STATUS.equalsIgnoreCase(status)) {
-                filteredByStatus.addAll(getClosedEvents(events));
-            }
-        }
-        return filteredByStatus;
-    }
-
-    private List<Event> filterByTags(List<Event> events, List<String> tags) {
-        List<Event> filteredByTags = new ArrayList<>();
-        tags.stream().filter(Objects::nonNull).map(String::toUpperCase).forEach(tag -> {
-            switch (tag) {
-                case ECONOMIC_TAG:
-                    filteredByTags.addAll(getEventsByTagName(events, ECONOMIC_TAG));
-                    break;
-                case ENVIRONMENTAL_TAG:
-                    filteredByTags.addAll(getEventsByTagName(events, ENVIRONMENTAL_TAG));
-                    break;
-                case SOCIAL_TAG:
-                    filteredByTags.addAll(getEventsByTagName(events, SOCIAL_TAG));
-                    break;
-                default:
-                    break;
-            }
-        });
-        return filteredByTags;
-    }
-
-    private List<Event> getFutureEvents(List<Event> events) {
-        return events.stream().filter(Event::isRelevant).collect(Collectors.toList());
-    }
-
-    private List<Event> getPastEvents(List<Event> events) {
-        return events.stream().filter(event -> !event.isRelevant()).collect(Collectors.toList());
-    }
-
-    private List<Event> getOpenEvents(List<Event> events) {
-        return events.stream().filter(Event::isOpen).collect(Collectors.toList());
-    }
-
-    private List<Event> getClosedEvents(List<Event> events) {
-        return events.stream().filter(event -> !event.isOpen()).collect(Collectors.toList());
-    }
-
-    private List<Event> getJoinedEvents(List<Event> events, Long userId) {
-        return events.stream().filter(event -> event.getAttenders().stream().map(User::getId)
-            .collect(Collectors.toList()).contains(userId)).collect(Collectors.toList());
-    }
-
-    private List<Event> getCreatedEvents(List<Event> events, Long userId) {
-        return events.stream().filter(event -> event.getOrganizer().getId().equals(userId))
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> getSavedEvents(List<Event> events, Long userId) {
-        return events.stream().filter(event -> event.getFollowers().stream().map(User::getId)
-            .collect(Collectors.toList()).contains(userId)).collect(Collectors.toList());
-    }
-
-    private List<Event> getEventsByTagName(final List<Event> events, final String tag) {
-        return events.stream().filter(event -> event.getTags().stream()
-            .map(Tag::getTagTranslations)
-            .flatMap(Collection::stream)
-            .anyMatch(tagTranslation -> tag.equalsIgnoreCase(tagTranslation.getName())))
-            .collect(Collectors.toList());
-    }
-
-    private List<Event> getSortedListByEventId(List<Event> unsorted) {
-        return unsorted.stream().distinct().sorted(Comparator.comparing(Event::getId, Comparator.reverseOrder()))
-            .collect(Collectors.toList());
-    }
-
-    private PageableAdvancedDto<EventDto> buildPageableAdvancedDto(Page<Event> eventsPage, Long userId) {
-        List<EventDto> eventDtos = modelMapper.map(eventsPage.getContent(),
-            new TypeToken<List<EventDto>>() {
-            }.getType());
-
-        if (Objects.nonNull(eventDtos)) {
-            eventDtos.forEach(eventDto -> {
-                if (Objects.nonNull(eventDto.getOrganizer())) {
-                    Long idOrganizer = eventDto.getOrganizer().getId();
-                    if (Objects.nonNull(idOrganizer)) {
-                        boolean isOrganizedByFriend = userRepo.isFriend(idOrganizer, userId);
-                        eventDto.setOrganizedByFriend(isOrganizedByFriend);
-                    } else {
-                        eventDto.setOrganizedByFriend(false);
-                    }
-                } else {
-                    eventDto.setOrganizedByFriend(false);
-                }
-            });
-        }
-
-        if (CollectionUtils.isNotEmpty(eventDtos)) {
-            setSubscribes(eventDtos, userId);
-            setFollowers(eventDtos, userId);
-        }
-
-        return new PageableAdvancedDto<>(
-            eventDtos,
-            eventsPage.getTotalElements(),
-            eventsPage.getPageable().getPageNumber(),
-            eventsPage.getTotalPages(),
-            eventsPage.getNumber(),
-            eventsPage.hasPrevious(),
-            eventsPage.hasNext(),
-            eventsPage.isFirst(),
-            eventsPage.isLast());
+        return Collections.max(event.getDates().stream().map(EventDateLocation::getFinishDate).toList());
     }
 
     private PageableAdvancedDto<EventDto> buildPageableAdvancedDto(Page<Event> eventsPage) {
@@ -867,12 +682,26 @@ public class EventServiceImpl implements EventService {
             eventsPage.isLast());
     }
 
+    private PageableAdvancedDto<EventDto> buildPageableAdvancedDto(Page<Long> eventIds, List<Tuple> tuples,
+        Pageable pageable) {
+        return new PageableAdvancedDto<>(
+            mapTupleListToEventDtoList(tuples, eventIds.toList()),
+            eventIds.getTotalElements(),
+            pageable.getPageNumber(),
+            eventIds.getTotalPages(),
+            eventIds.getNumber(),
+            eventIds.hasPrevious(),
+            eventIds.hasNext(),
+            eventIds.isFirst(),
+            eventIds.isLast());
+    }
+
     private void setSubscribes(Collection<EventDto> eventDtos, Long userId) {
         List<Long> eventIds = eventDtos.stream().map(EventDto::getId).collect(Collectors.toList());
         List<Event> subscribedEvents = eventRepo.findSubscribedAmongEventIds(eventIds, userId);
         List<Long> subscribedEventIds = subscribedEvents.stream()
             .map(Event::getId)
-            .collect(Collectors.toList());
+            .toList();
         eventDtos.forEach(eventDto -> eventDto.setSubscribed(subscribedEventIds.contains(eventDto.getId())));
     }
 
@@ -881,16 +710,21 @@ public class EventServiceImpl implements EventService {
         List<Event> followedEvents = eventRepo.findFavoritesAmongEventIds(eventIds, userId);
         List<Long> followedEventIds = followedEvents.stream()
             .map(Event::getId)
-            .collect(Collectors.toList());
+            .toList();
         eventDtos.forEach(eventDto -> eventDto.setFavorite(followedEventIds.contains(eventDto.getId())));
     }
 
     private EventDto buildEventDto(Event event, Long userId) {
         EventDto eventDto = modelMapper.map(event, EventDto.class);
-
+        Integer currentUserGrade = event.getEventGrades()
+            .stream()
+            .filter(g -> g.getUser() != null && g.getUser().getId().equals(userId))
+            .map(EventGrade::getGrade)
+            .findFirst()
+            .orElse(null);
         setFollowers(List.of(eventDto), userId);
         setSubscribes(List.of(eventDto), userId);
-
+        eventDto.setCurrentUserGrade(currentUserGrade);
         return eventDto;
     }
 
@@ -898,22 +732,18 @@ public class EventServiceImpl implements EventService {
         return modelMapper.map(event, EventDto.class);
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public PageableDto<SearchEventsDto> search(String searchQuery, String languageCode) {
-        Page<Event> page = eventsSearchRepo.find(PageRequest.of(0, 3), searchQuery, languageCode);
-        return getSearchNewsDtoPageableDto(page);
-    }
-
-    @Override
-    public PageableDto<SearchEventsDto> search(Pageable pageable, String searchQuery, String languageCode) {
-        Page<Event> page = eventsSearchRepo.find(pageable, searchQuery, languageCode);
-        return getSearchNewsDtoPageableDto(page);
+    public PageableDto<SearchEventsDto> search(Pageable pageable, String searchQuery, Boolean isFavorite, Long userId) {
+        return getSearchNewsDtoPageableDto(eventRepo.find(pageable, searchQuery, isFavorite, userId));
     }
 
     private PageableDto<SearchEventsDto> getSearchNewsDtoPageableDto(Page<Event> page) {
         List<SearchEventsDto> searchEventsDtos = page.stream()
-            .map(events -> modelMapper.map(events, SearchEventsDto.class))
-            .collect(Collectors.toList());
+            .map(event -> modelMapper.map(event, SearchEventsDto.class))
+            .toList();
 
         return new PageableDto<>(
             searchEventsDtos,
@@ -922,9 +752,117 @@ public class EventServiceImpl implements EventService {
             page.getTotalPages());
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
-    public Long getAmountOfOrganizedAndAttendedEventsByUserId(Long userId) {
-        return eventRepo.getAmountOfOrganizedAndAttendedEventsByUserId(userId);
+    public List<AddressDto> getAllEventsAddresses() {
+        return eventRepo.findAllEventsAddresses().stream()
+            .map(eventAddress -> modelMapper.map(eventAddress, AddressDto.class))
+            .toList();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Long getCountOfAttendedEventsByUserId(Long userId) {
+        return eventRepo.countDistinctByAttendersId(userId);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Long getCountOfOrganizedEventsByUserId(Long userId) {
+        return eventRepo.countDistinctByOrganizerId(userId);
+    }
+
+    @Override
+    public void like(Long eventId, UserVO userVO) {
+        Event event = findEventId(eventId);
+        User eventAuthor = getEventAuthor(event);
+        boolean isAuthor = Objects.nonNull(event.getOrganizer()) && event.getOrganizer().getId().equals(userVO.getId());
+
+        if (isAuthor) {
+            throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
+        }
+
+        if (removeLikeIfExists(event, userVO, eventAuthor)) {
+            return;
+        }
+
+        removeDislikeIfExists(event, userVO);
+
+        event.getUsersLikedEvents().add(modelMapper.map(userVO, User.class));
+        achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.LIKE_EVENT,
+            AchievementAction.ASSIGN);
+        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("LIKE_EVENT"), userVO);
+
+        sendEventLikeNotification(eventAuthor, userVO, eventId, event);
+
+        eventRepo.save(event);
+    }
+
+    @Override
+    public void dislike(UserVO userVO, Long eventId) {
+        Event event = findEventId(eventId);
+        boolean isAuthor = Objects.nonNull(event.getOrganizer()) && event.getOrganizer().getId().equals(userVO.getId());
+
+        if (isAuthor) {
+            throw new BadRequestException(ErrorMessage.USER_HAS_NO_PERMISSION);
+        }
+
+        removeLikeIfExists(event, userVO, getEventAuthor(event));
+
+        if (removeDislikeIfExists(event, userVO)) {
+            eventRepo.save(event);
+            return;
+        }
+
+        event.getUsersDislikedEvents().add(modelMapper.map(userVO, User.class));
+
+        eventRepo.save(event);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public int countLikes(Long eventId) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersLikedEvents().size();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public int countDislikes(Long eventId) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersDislikedEvents().size();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public boolean isEventLikedByUser(Long eventId, UserVO userVO) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersLikedEvents().stream().anyMatch(u -> u.getId().equals(userVO.getId()));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public boolean isEventDislikedByUser(Long eventId, UserVO userVO) {
+        Event event = eventRepo.findById(eventId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + eventId));
+        return event.getUsersDislikedEvents().stream().anyMatch(u -> u.getId().equals(userVO.getId()));
     }
 
     @Override
@@ -942,12 +880,8 @@ public class EventServiceImpl implements EventService {
         event.getRequesters().add(currentUser);
         eventRepo.save(event);
 
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(event.getOrganizer().getEmail())
-            .subject(EmailNotificationMessagesConstants.NEW_JOIN_REQUEST_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.NEW_JOIN_REQUEST_MESSAGE,
-                currentUser.getName()))
-            .build());
+        userNotificationService.createNotification(modelMapper.map(event.getOrganizer(), UserVO.class),
+            modelMapper.map(currentUser, UserVO.class), NotificationType.EVENT_INVITE, eventId, event.getTitle());
     }
 
     @Override
@@ -997,30 +931,28 @@ public class EventServiceImpl implements EventService {
     public void approveRequest(Long eventId, String email, Long userId) {
         UserVO userVO = restClient.findByEmail(email);
         User currentUser = modelMapper.map(userVO, User.class);
+
         Event event = eventRepo.findById(eventId)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
 
-        if (currentUser.getId() != event.getOrganizer().getId()) {
+        if (!Objects.equals(currentUser.getId(), event.getOrganizer().getId())) {
             throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
-        if (event.getRequesters().stream().noneMatch(u -> u.getId() == userId)) {
+        if (event.getRequesters().stream().noneMatch(u -> Objects.equals(u.getId(), userId))) {
             throw new BadRequestException(ErrorMessage.USER_DID_NOT_REQUEST_FOR_EVENT + userId);
         }
         User userToJoin = userRepo.findById(userId)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId));
 
         event
-            .setRequesters(event.getRequesters().stream().filter(u -> u.getId() != userId).collect(Collectors.toSet()));
+            .setRequesters(event.getRequesters().stream().filter(u -> !Objects.equals(u.getId(), userId))
+                .collect(Collectors.toSet()));
         event.getAttenders().add(userToJoin);
 
         eventRepo.save(event);
 
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(userToJoin.getEmail())
-            .subject(EmailNotificationMessagesConstants.JOIN_REQUEST_APPROVED_SUBJECT)
-            .message(String.format(EmailNotificationMessagesConstants.JOIN_REQUEST_APPROVED_MESSAGE,
-                event.getTitle()))
-            .build());
+        userNotificationService.createNotification(userVO, modelMapper.map(userToJoin, UserVO.class),
+            NotificationType.EVENT_REQUEST_ACCEPTED, eventId, event.getTitle());
     }
 
     @Override
@@ -1030,10 +962,10 @@ public class EventServiceImpl implements EventService {
         Event event = eventRepo.findById(eventId)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
 
-        if (currentUser.getId() != event.getOrganizer().getId()) {
+        if (!Objects.equals(currentUser.getId(), event.getOrganizer().getId())) {
             throw new UserHasNoPermissionToAccessException(ErrorMessage.USER_HAS_NO_PERMISSION);
         }
-        if (event.getRequesters().stream().noneMatch(u -> u.getId() == userId)) {
+        if (event.getRequesters().stream().noneMatch(u -> Objects.equals(u.getId(), userId))) {
             throw new BadRequestException(ErrorMessage.USER_DID_NOT_REQUEST_FOR_EVENT + userId);
         }
         User userToJoin =
@@ -1041,14 +973,196 @@ public class EventServiceImpl implements EventService {
                 .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + userId));
 
         event
-            .setRequesters(event.getRequesters().stream().filter(u -> u.getId() != userId).collect(Collectors.toSet()));
+            .setRequesters(event.getRequesters().stream().filter(u -> !Objects.equals(u.getId(), userId))
+                .collect(Collectors.toSet()));
 
         eventRepo.save(event);
 
-        notificationService.sendEmailNotification(GeneralEmailMessage.builder()
-            .email(userToJoin.getEmail())
-            .subject(EmailNotificationMessagesConstants.JOIN_REQUEST_DECLINED_SUBJECT)
-            .message(EmailNotificationMessagesConstants.JOIN_REQUEST_DECLINED_MESSAGE)
-            .build());
+        userNotificationService.createNotification(userVO, modelMapper.map(userToJoin, UserVO.class),
+            NotificationType.EVENT_REQUEST_DECLINED, eventId, event.getTitle());
+    }
+
+    private void sendEventLikeNotification(User targetUser, UserVO actionUser, Long eventId, Event event) {
+        final LikeNotificationDto likeNotificationDto = LikeNotificationDto.builder()
+            .targetUserVO(modelMapper.map(targetUser, UserVO.class))
+            .actionUserVO(actionUser)
+            .newsId(eventId)
+            .newsTitle(event.getTitle())
+            .notificationType(NotificationType.EVENT_LIKE)
+            .secondMessageText(event.getTitle())
+            .isLike(true)
+            .build();
+        userNotificationService.createOrUpdateLikeNotification(likeNotificationDto);
+    }
+
+    private List<EventDto> mapTupleListToEventDtoList(List<Tuple> page, List<Long> sortedIds) {
+        Map<Long, EventDto> eventsMap = new HashMap<>();
+        Map<Long, Set<TagDto>> tagsMap = new HashMap<>();
+        List<EventDto> sortedDtos = new ArrayList<>();
+        for (Tuple tuple : page) {
+            long id = tuple.get(eventId, Long.class);
+            EventDto eventDto;
+            if (!eventsMap.containsKey(id)) {
+                eventDto = EventDto.builder()
+                    .id(id)
+                    .title(tuple.get(title, String.class))
+                    .description(tuple.get(description, String.class))
+                    .organizer(EventAuthorDto.builder()
+                        .id(tuple.get(organizerId, Long.class))
+                        .name(tuple.get(organizerName, String.class))
+                        .build())
+                    .creationDate(tuple.get(creationDate, Date.class).toLocalDate())
+                    .titleImage(tuple.get(titleImage, String.class))
+                    .isOpen(tuple.get(isOpen, Boolean.class))
+                    .type(EventType.valueOf(tuple.get(type, String.class)))
+                    .isRelevant(tuple.get(isRelevant, Boolean.class))
+                    .likes(Math.toIntExact(tuple.get(likes, Long.class)))
+                    .dislikes(Math.toIntExact(tuple.get(dislikes, Long.class)))
+                    .countComments(Math.toIntExact(tuple.get(countComments, Long.class)))
+                    .isOrganizedByFriend(tuple.get(isOrganizedByFriend, Boolean.class))
+                    .isFavorite(tuple.get(isFavorite, Boolean.class))
+                    .isSubscribed(tuple.get(isSubscribed, Boolean.class))
+                    .eventRate(tuple.get(grade, BigDecimal.class) != null
+                        ? tuple.get(grade, BigDecimal.class).doubleValue()
+                        : 0.0)
+                    .currentUserGrade(tuple.get(currentUserGrade, Integer.class))
+                    .dates(new ArrayList<>())
+                    .tags(new ArrayList<>())
+                    .build();
+                eventsMap.put(id, eventDto);
+            } else {
+                eventDto = eventsMap.get(id);
+            }
+            AddressDto addressDto = AddressDto.builder()
+                .latitude(tuple.get(latitude, Double.class))
+                .longitude(tuple.get(longitude, Double.class))
+                .streetEn(tuple.get(streetEn, String.class))
+                .streetUa(tuple.get(streetUa, String.class))
+                .houseNumber(tuple.get(houseNumber, String.class))
+                .cityEn(tuple.get(cityEn, String.class))
+                .cityUa(tuple.get(cityUa, String.class))
+                .regionEn(tuple.get(regionEn, String.class))
+                .regionUa(tuple.get(regionUa, String.class))
+                .countryEn(tuple.get(countryEn, String.class))
+                .countryUa(tuple.get(countryUa, String.class))
+                .formattedAddressEn(tuple.get(formattedAddressEn, String.class))
+                .formattedAddressUa(tuple.get(formattedAddressUa, String.class))
+                .build();
+            if (ObjectUtils.allNull(addressDto.getLatitude(), addressDto.getLongitude(), addressDto.getStreetEn(),
+                addressDto.getStreetUa(), addressDto.getCityEn(), addressDto.getCityUa(), addressDto.getCountryEn(),
+                addressDto.getCountryUa(), addressDto.getRegionEn(), addressDto.getRegionUa(),
+                addressDto.getHouseNumber(), addressDto.getFormattedAddressEn(), addressDto.getFormattedAddressUa())) {
+                addressDto = null;
+            }
+            eventDto.getDates().add(EventDateLocationDto.builder()
+                .startDate(ZonedDateTime.ofInstant(tuple.get(startDate, Instant.class), ZoneId.systemDefault()))
+                .finishDate(ZonedDateTime.ofInstant(tuple.get(finishDate, Instant.class), ZoneId.systemDefault()))
+                .onlineLink(tuple.get(onlineLink, String.class))
+                .coordinates(addressDto)
+                .build());
+            Set<TagDto> tagDtos = tagsMap.getOrDefault(id, new HashSet<>());
+            tagDtos.add(TagDto.builder()
+                .id(tuple.get(tagId, Long.class))
+                .name(tuple.get(tagName, String.class))
+                .languageCode(tuple.get(languageCode, String.class))
+                .build());
+            tagsMap.put(id, tagDtos);
+        }
+        for (Long id : sortedIds) {
+            EventDto eventDto = eventsMap.get(id);
+            Set<TagDto> tags = tagsMap.get(id);
+            List<TagUaEnDto> tagUaEnDtos = new ArrayList<>();
+
+            Map<Long, List<TagDto>> groupedTags = tags.stream()
+                .collect(Collectors.groupingBy(TagDto::getId));
+
+            groupedTags.forEach((tagId, tagList) -> {
+                Map<String, TagDto> uaEnMap = new HashMap<>();
+                tagList.stream()
+                    .filter(tag -> !uaEnMap.containsKey(tag.getLanguageCode()))
+                    .forEach(tag -> uaEnMap.put(tag.getLanguageCode(), tag));
+                if (uaEnMap.containsKey("ua") && uaEnMap.containsKey("en")) {
+                    TagUaEnDto tagUaEnDto = TagUaEnDto.builder()
+                        .id(tagId)
+                        .nameUa(uaEnMap.get("ua").getName())
+                        .nameEn(uaEnMap.get("en").getName())
+                        .build();
+                    tagUaEnDtos.add(tagUaEnDto);
+                }
+            });
+            eventDto.setTags(tagUaEnDtos);
+            sortedDtos.add(eventDto);
+        }
+        sortedDtos.forEach(event -> {
+            List<EventDateLocationDto> uniqueDates = event.getDates().stream()
+                .distinct()
+                .toList();
+            event.setDates(uniqueDates);
+        });
+        return sortedDtos;
+    }
+
+    private void checkingEqualityDateTimeInEventDateLocationDto(List<EventDateLocationDto> eventDateLocationDtos) {
+        if (eventDateLocationDtos != null && !eventDateLocationDtos.isEmpty()) {
+            eventDateLocationDtos.stream()
+                .filter(eventDateLocationDto -> Duration.between(
+                    eventDateLocationDto.getStartDate(),
+                    eventDateLocationDto.getFinishDate()).toMinutes() < 30)
+                .findAny()
+                .ifPresent(eventDateLocationDto -> {
+                    throw new IllegalArgumentException(ErrorMessage.INVALID_DURATION_BETWEEN_START_AND_FINISH);
+                });
+        }
+    }
+
+    private Event findEventId(Long id) {
+        return eventRepo.findById(id)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND_BY_ID + id));
+    }
+
+    private User getEventAuthor(Event event) {
+        if (event.getOrganizer() != null) {
+            return userRepo.findById(event.getOrganizer().getId()).orElseThrow(
+                () -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_ID + event.getOrganizer().getId()));
+        }
+        return null;
+    }
+
+    /**
+     * Removes a like from the event if the user has already liked it. Returns true
+     * if a like was removed, false otherwise.
+     */
+    private boolean removeLikeIfExists(Event event, UserVO userVO, User eventAuthor) {
+        boolean userLiked = event.getUsersLikedEvents().stream()
+            .anyMatch(user -> user.getId().equals(userVO.getId()));
+
+        if (userLiked) {
+            event.getUsersLikedEvents().removeIf(user -> user.getId().equals(userVO.getId()));
+            achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.LIKE_EVENT,
+                AchievementAction.DELETE);
+            ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("UNDO_LIKE_EVENT"), userVO);
+
+            if (eventAuthor != null) {
+                userNotificationService.removeActionUserFromNotification(
+                    modelMapper.map(eventAuthor, UserVO.class), userVO, event.getId(), NotificationType.EVENT_LIKE);
+            }
+            return true;
+        }
+        return false;
+    }
+
+    /**
+     * Removes a dislike from the event if the user has already disliked it. Returns
+     * true if a dislike was removed, false otherwise.
+     */
+    private boolean removeDislikeIfExists(Event event, UserVO userVO) {
+        boolean userDisliked = event.getUsersDislikedEvents().stream()
+            .anyMatch(user -> user.getId().equals(userVO.getId()));
+
+        if (userDisliked) {
+            event.getUsersDislikedEvents().removeIf(user -> user.getId().equals(userVO.getId()));
+            return true;
+        }
+        return false;
     }
 }
