@@ -1,27 +1,6 @@
 package greencity.service;
 
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import javax.validation.Valid;
-
-import org.apache.commons.lang3.ArrayUtils;
-import org.modelmapper.ModelMapper;
-import org.modelmapper.TypeToken;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.google.maps.model.GeocodingResult;
-
 import greencity.client.RestClient;
 import greencity.constant.ErrorMessage;
 import greencity.constant.LogMessage;
@@ -32,43 +11,70 @@ import greencity.dto.filter.FilterDistanceDto;
 import greencity.dto.filter.FilterPlaceDto;
 import greencity.dto.location.AddPlaceLocation;
 import greencity.dto.location.LocationVO;
+import greencity.dto.openhours.OpenHoursDto;
 import greencity.dto.openhours.OpeningHoursDto;
 import greencity.dto.openhours.OpeningHoursVO;
-import greencity.dto.place.AddPlaceDto;
-import greencity.dto.place.AdminPlaceDto;
-import greencity.dto.place.BulkUpdatePlaceStatusDto;
-import greencity.dto.place.FilterPlaceCategory;
-import greencity.dto.place.PlaceAddDto;
 import greencity.dto.place.PlaceByBoundsDto;
-import greencity.dto.place.PlaceInfoDto;
+import greencity.dto.place.UpdatePlaceStatusWithUserEmailDto;
+import greencity.dto.place.AddPlaceDto;
 import greencity.dto.place.PlaceResponse;
+import greencity.dto.place.FilterPlaceCategory;
+import greencity.dto.place.FilterAdminPlaceDto;
+import greencity.dto.place.PlaceInfoDto;
+import greencity.dto.place.BulkUpdatePlaceStatusDto;
+import greencity.dto.place.UpdatePlaceStatusDto;
+import greencity.dto.place.AdminPlaceDto;
+import greencity.dto.place.PlaceAddDto;
 import greencity.dto.place.PlaceUpdateDto;
 import greencity.dto.place.PlaceVO;
-import greencity.dto.place.UpdatePlaceStatusDto;
+import greencity.dto.search.SearchPlacesDto;
 import greencity.dto.user.UserVO;
 import greencity.entity.Category;
 import greencity.entity.DiscountValue;
 import greencity.entity.Location;
 import greencity.entity.OpeningHours;
+import greencity.entity.Photo;
 import greencity.entity.Place;
 import greencity.entity.Specification;
 import greencity.entity.User;
-import greencity.repository.FavoritePlaceRepo;
+import greencity.enums.EmailPreference;
+import greencity.enums.EmailPreferencePeriodicity;
+import greencity.enums.NotificationType;
 import greencity.enums.PlaceStatus;
 import greencity.enums.Role;
 import greencity.enums.UserStatus;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.PlaceStatusException;
 import greencity.exception.exceptions.UserBlockedException;
-import greencity.message.SendChangePlaceStatusEmailMessage;
 import greencity.repository.CategoryRepo;
+import greencity.repository.FavoritePlaceRepo;
 import greencity.repository.PlaceRepo;
 import greencity.repository.UserRepo;
 import greencity.repository.options.PlaceFilter;
-import lombok.AllArgsConstructor;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.validation.Valid;
+import java.security.Principal;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.ArrayUtils;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.TypeToken;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
-
+import org.springframework.web.multipart.MultipartFile;
 import static greencity.constant.AppConstant.CONSTANT_OF_FORMULA_HAVERSINE_KM;
 
 /**
@@ -76,48 +82,45 @@ import static greencity.constant.AppConstant.CONSTANT_OF_FORMULA_HAVERSINE_KM;
  */
 @Slf4j
 @Service
-@AllArgsConstructor
+@Transactional
+@RequiredArgsConstructor
 public class PlaceServiceImpl implements PlaceService {
     private final PlaceRepo placeRepo;
     private final ModelMapper modelMapper;
     private final CategoryService categoryService;
     private final LocationService locationService;
     private final SpecificationService specificationService;
-    private final RestClient restClient;
     private final OpenHoursService openingHoursService;
+    private final UserService userService;
     private final DiscountService discountService;
-    private final NotificationService notificationService;
     private final ZoneId datasourceTimezone;
     private final ProposePlaceService proposePlaceService;
     private final CategoryRepo categoryRepo;
     private final GoogleApiService googleApiService;
     private final UserRepo userRepo;
     private final FavoritePlaceRepo favoritePlaceRepo;
+    private final FileService fileService;
+    private final UserNotificationService userNotificationService;
+    private final RestClient restClient;
 
     /**
      * {@inheritDoc}
-     *
-     * @author Roman Zahorui
      */
     @Override
     public PageableDto<AdminPlaceDto> getPlacesByStatus(PlaceStatus placeStatus, Pageable pageable) {
         Page<Place> places = placeRepo.findAllByStatusOrderByModifiedDateDesc(placeStatus, pageable);
-        List<AdminPlaceDto> list = places.stream()
-            .map(place -> modelMapper.map(place, AdminPlaceDto.class))
-            .collect(Collectors.toList());
+        List<AdminPlaceDto> list = createAdminPageableDtoList(places);
         return new PageableDto<>(list, places.getTotalElements(), places.getPageable().getPageNumber(),
             places.getTotalPages());
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Marian Datsko
      */
     @Transactional
     @Override
     public PlaceVO save(PlaceAddDto dto, String email) {
-        UserVO user = restClient.findByEmail(email);
+        UserVO user = userService.findByEmail(email);
         if (user.getUserStatus().equals(UserStatus.BLOCKED)) {
             throw new UserBlockedException(ErrorMessage.USER_HAS_BLOCKED_STATUS);
         }
@@ -128,7 +131,7 @@ public class PlaceServiceImpl implements PlaceService {
             proposePlaceService.checkInputTime(dto.getOpeningHoursList());
         }
         PlaceVO placeVO = modelMapper.map(dto, PlaceVO.class);
-        setUserToPlaceByEmail(email, placeVO);
+        setUserToPlace(user, placeVO);
         if (placeVO.getDiscountValues() != null) {
             proposePlaceService.saveDiscountValuesWithPlace(placeVO.getDiscountValues(), placeVO);
         }
@@ -146,6 +149,7 @@ public class PlaceServiceImpl implements PlaceService {
      * {@inheritDoc}
      */
     @Override
+    @Transactional(readOnly = true)
     public List<PlaceVO> getAllCreatedPlacesByUserId(Long userId) {
         return placeRepo.findAllByUserId(userId).stream()
             .map(place -> modelMapper.map(place, PlaceVO.class))
@@ -153,27 +157,24 @@ public class PlaceServiceImpl implements PlaceService {
     }
 
     /**
-     * Method for getting {@link User} and set this {@link User} to place.
+     * Method for setting this {@link User} to place.
      *
-     * @param email   - String, user's email.
+     * @param userVO  - {@link User} entity.
      * @param placeVO - {@link Place} entity.
-     * @return user - {@link User}.
-     * @author Kateryna Horokh
      */
-    private UserVO setUserToPlaceByEmail(String email, PlaceVO placeVO) {
-        UserVO userVO = restClient.findByEmail(email);
+    private void setUserToPlace(UserVO userVO, PlaceVO placeVO) {
         placeVO.setAuthor(userVO);
         if (userVO.getRole() == Role.ROLE_ADMIN || userVO.getRole() == Role.ROLE_MODERATOR) {
             placeVO.setStatus(PlaceStatus.APPROVED);
-            notificationService.sendImmediatelyReport(placeVO);
+            List<UserVO> usersId = userService.getUsersIdByEmailPreferenceAndEmailPeriodicity(EmailPreference.PLACES,
+                EmailPreferencePeriodicity.IMMEDIATELY);
+            userNotificationService.createNewNotificationForPlaceAdded(usersId, placeVO.getId(),
+                placeVO.getCategory().getName(), placeVO.getName());
         }
-        return userVO;
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Kateryna Horokh
      */
     @Transactional
     @Override
@@ -201,7 +202,6 @@ public class PlaceServiceImpl implements PlaceService {
      *
      * @param discounts    - set of {@link DiscountValue}.
      * @param updatedPlace - {@link Place} entity.
-     * @author Kateryna Horokh
      */
     private void updateDiscount(Set<DiscountValueDto> discounts, Place updatedPlace) {
         log.info(LogMessage.IN_UPDATE_DISCOUNT_FOR_PLACE);
@@ -231,7 +231,6 @@ public class PlaceServiceImpl implements PlaceService {
      *
      * @param hoursUpdateDtoSet - set of {@code Discount}.
      * @param updatedPlace      - {@link Place} entity.
-     * @author Kateryna Horokh
      */
     private void updateOpening(Set<OpeningHoursDto> hoursUpdateDtoSet, Place updatedPlace) {
         log.info(LogMessage.IN_UPDATE_OPENING_HOURS_FOR_PLACE);
@@ -255,8 +254,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka
      */
     @Override
     public void deleteById(Long id) {
@@ -267,8 +264,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka
      */
     @Transactional
     @Override
@@ -283,8 +278,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka.
      */
     @Override
     public List<PlaceVO> findAll() {
@@ -296,28 +289,20 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Olena Petryshak.
-     * @author Olena Sotnik.
-     *
      */
     @Override
-    public PageableDto<AdminPlaceDto> findAll(Pageable pageable, String email) {
+    public PageableDto<AdminPlaceDto> findAll(Pageable pageable, Principal principal) {
         log.info(LogMessage.IN_FIND_ALL);
-
         Page<Place> pages = placeRepo.findAll(pageable);
-        List<AdminPlaceDto> placeDtos =
-            pages.stream().map(place -> modelMapper.map(place, AdminPlaceDto.class)).collect(Collectors.toList());
-        if (!CollectionUtils.isEmpty(placeDtos) && !email.isBlank()) {
-            setIsFavoriteToAdminPlaceDto(placeDtos, email);
+        List<AdminPlaceDto> placeDtos = createAdminPageableDtoList(pages);
+        if (!CollectionUtils.isEmpty(placeDtos) && principal != null) {
+            setIsFavoriteToAdminPlaceDto(placeDtos, principal.getName());
         }
         return new PageableDto<>(placeDtos, pages.getTotalElements(), pageable.getPageNumber(), pages.getTotalPages());
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka
      */
     @Override
     public UpdatePlaceStatusDto updateStatus(Long id, PlaceStatus status) {
@@ -328,20 +313,21 @@ public class PlaceServiceImpl implements PlaceService {
         updatable.setStatus(status);
         updatable.setModifiedDate(ZonedDateTime.now(datasourceTimezone));
         if (status.equals(PlaceStatus.APPROVED)) {
-            notificationService.sendImmediatelyReport(modelMapper.map(updatable, PlaceVO.class));
+            List<UserVO> usersId = userService.getUsersIdByEmailPreferenceAndEmailPeriodicity(EmailPreference.PLACES,
+                EmailPreferencePeriodicity.IMMEDIATELY);
+            userNotificationService.createNewNotificationForPlaceAdded(usersId, updatable.getId(),
+                updatable.getCategory().getName(), updatable.getName());
         }
         if (oldStatus.equals(PlaceStatus.PROPOSED)) {
-            restClient.changePlaceStatus(new SendChangePlaceStatusEmailMessage(updatable.getAuthor().getName(),
-                updatable.getName(), updatable.getStatus().toString().toLowerCase(),
-                updatable.getAuthor().getEmail()));
+            userNotificationService.createNewNotification(modelMapper.map(updatable.getAuthor(), UserVO.class),
+                NotificationType.PLACE_STATUS, updatable.getId(), updatable.getName(),
+                updatable.getStatus().name().toLowerCase());
         }
         return modelMapper.map(placeRepo.save(updatable), UpdatePlaceStatusDto.class);
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka
      */
     @Transactional
     @Override
@@ -358,8 +344,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka.
      */
     @Override
     public PlaceVO findById(Long id) {
@@ -380,25 +364,20 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Marian Milian
      */
     @Override
     public Optional<PlaceVO> findByIdOptional(Long id) {
-        return placeRepo.findById(id).map(place -> modelMapper.map(place, PlaceVO.class));
+        return placeRepo.findById(id)
+            .map(place -> modelMapper.map(place, PlaceVO.class));
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Dmytro Dovhal
      */
     @Override
     public PlaceInfoDto getInfoById(Long id) {
-        Place place =
-            placeRepo
-                .findById(id)
-                .orElseThrow(() -> new NotFoundException(ErrorMessage.PLACE_NOT_FOUND_BY_ID + id));
+        Place place = placeRepo.findById(id)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.PLACE_NOT_FOUND_BY_ID + id));
         PlaceInfoDto placeInfoDto = modelMapper.map(place, PlaceInfoDto.class);
         placeInfoDto.setRate(placeRepo.getAverageRate(id));
         return placeInfoDto;
@@ -406,30 +385,23 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Kateryna Horokh
      */
     @Override
     public PlaceUpdateDto getInfoForUpdatingById(Long id) {
-        Place place = placeRepo
-            .findById(id)
+        Place place = placeRepo.findById(id)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.PLACE_NOT_FOUND_BY_ID + id));
         return modelMapper.map(place, PlaceUpdateDto.class);
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Olena Petryshak
      */
     @Override
     public PageableDto<AdminPlaceDto> searchBy(Pageable pageable, String searchQuery) {
         Page<Place> pages = placeRepo.searchBy(pageable, searchQuery);
-        List<AdminPlaceDto> adminPlaceDtos = pages.stream()
-            .map(place -> modelMapper.map(place, AdminPlaceDto.class))
-            .collect(Collectors.toList());
+        List<AdminPlaceDto> placeDtos = createAdminPageableDtoList(pages);
         return new PageableDto<>(
-            adminPlaceDtos,
+            placeDtos,
             pages.getTotalElements(),
             pageable.getPageNumber(),
             pages.getTotalPages());
@@ -437,8 +409,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Marian Milian
      */
     @Override
     public List<PlaceByBoundsDto> findPlacesByMapsBounds(@Valid FilterPlaceDto filterPlaceDto) {
@@ -450,8 +420,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Zakhar Skaletskyi
      */
     @Override
     public boolean existsById(Long id) {
@@ -461,8 +429,6 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Zakhar Skaletskyi
      */
     @Override
     public Double averageRate(Long id) {
@@ -472,14 +438,13 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Roman Zahorui
      */
     @Override
-    public List<PlaceByBoundsDto> getPlacesByFilter(FilterPlaceDto filterDto) {
+    public List<PlaceByBoundsDto> getPlacesByFilter(FilterPlaceDto filterDto, UserVO userVO) {
+        Long userId = userVO == null ? null : userVO.getId();
         List<Place> list =
             ArrayUtils.isNotEmpty(filterDto.getCategories()) ? placeRepo.findPlaceByCategory(filterDto.getCategories())
-                : placeRepo.findAll(new PlaceFilter(filterDto));
+                : placeRepo.findAll(new PlaceFilter(filterDto, userId));
         list = getPlacesByDistanceFromUser(filterDto, list);
         return list.stream()
             .map(place -> modelMapper.map(place, PlaceByBoundsDto.class))
@@ -492,7 +457,6 @@ public class PlaceServiceImpl implements PlaceService {
      * @param filterDto - {@link FilterPlaceDto} DTO.
      * @param placeList - {@link List} of {@link Place} that will be filtered.
      * @return {@link List} of {@link Place} - list of filtered {@link Place}s.
-     * @author Nazar Stasyuk
      */
     private List<Place> getPlacesByDistanceFromUser(FilterPlaceDto filterDto, List<Place> placeList) {
         FilterDistanceDto distanceFromUserDto = filterDto.getDistanceFromUserDto();
@@ -521,25 +485,19 @@ public class PlaceServiceImpl implements PlaceService {
     private void checkPlaceStatuses(PlaceStatus currentStatus, PlaceStatus updatedStatus, Long placeId) {
         if (currentStatus.equals(updatedStatus)) {
             log.error(LogMessage.PLACE_STATUS_NOT_DIFFERENT, placeId, updatedStatus);
-            throw new PlaceStatusException(String.format(
-                ErrorMessage.PLACE_STATUS_NOT_DIFFERENT, placeId, updatedStatus));
+            throw new PlaceStatusException(ErrorMessage.PLACE_STATUS_NOT_DIFFERENT.formatted(placeId, updatedStatus));
         }
     }
 
     /**
      * {@inheritDoc}
-     *
-     * @author Rostyslav Khasanov
      */
     @Override
     public PageableDto<AdminPlaceDto> filterPlaceBySearchPredicate(FilterPlaceDto filterDto, Pageable pageable) {
         Page<Place> list = placeRepo.findAll(new PlaceFilter(filterDto), pageable);
-        List<AdminPlaceDto> adminPlaceDtos =
-            list.getContent().stream()
-                .map(user -> modelMapper.map(user, AdminPlaceDto.class))
-                .collect(Collectors.toList());
+        List<AdminPlaceDto> placeDtos = createAdminPageableDtoList(list);
         return new PageableDto<>(
-            adminPlaceDtos,
+            placeDtos,
             list.getTotalElements(),
             list.getPageable().getPageNumber(),
             list.getTotalPages());
@@ -547,8 +505,39 @@ public class PlaceServiceImpl implements PlaceService {
 
     /**
      * {@inheritDoc}
-     *
-     * @author Nazar Vladyka
+     */
+    @Override
+    public PageableDto<AdminPlaceDto> getFilteredPlacesForAdmin(FilterAdminPlaceDto filterDto, Pageable pageable) {
+        Page<Place> list = placeRepo.findAll((root, query, cb) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            Optional.ofNullable(filterDto.getId())
+                .filter(id -> !id.isEmpty())
+                .ifPresent(id -> predicates.add(cb.equal(root.get("id"), id)));
+            Optional.ofNullable(filterDto.getName())
+                .filter(name -> !name.isEmpty())
+                .ifPresent(name -> predicates.add(cb.like(root.get("name"), "%" + name + "%")));
+            Optional.ofNullable(filterDto.getStatus())
+                .filter(status -> !status.isEmpty())
+                .ifPresent(status -> predicates.add(cb.equal(root.get("status"), PlaceStatus.valueOf(status))));
+            Optional.ofNullable(filterDto.getAuthor())
+                .filter(author -> !author.isEmpty())
+                .ifPresent(author -> predicates.add(cb.like(root.join("author").get("name"), "%" + author + "%")));
+            Optional.ofNullable(filterDto.getAddress())
+                .filter(address -> !address.isEmpty())
+                .ifPresent(
+                    address -> predicates.add(cb.like(root.join("location").get("address"), "%" + address + "%")));
+            return cb.and(predicates.toArray(new Predicate[0]));
+        }, pageable);
+        List<AdminPlaceDto> placeDtos = createAdminPageableDtoList(list);
+        return new PageableDto<>(
+            placeDtos,
+            list.getTotalElements(),
+            list.getPageable().getPageNumber(),
+            list.getTotalPages());
+    }
+
+    /**
+     * {@inheritDoc}
      */
     @Override
     public List<PlaceStatus> getStatuses() {
@@ -562,7 +551,7 @@ public class PlaceServiceImpl implements PlaceService {
     }
 
     @Override
-    public PlaceResponse addPlaceFromUi(AddPlaceDto dto, String email) {
+    public PlaceResponse addPlaceFromUi(AddPlaceDto dto, String email, MultipartFile[] images) {
         PlaceResponse placeResponse = modelMapper.map(dto, PlaceResponse.class);
         User user = userRepo.findByEmail(email)
             .orElseThrow(() -> new NotFoundException("User with email " + email + " doesn't exist"));
@@ -575,13 +564,27 @@ public class PlaceServiceImpl implements PlaceService {
         place.setCategory(categoryRepo.findCategoryByName(dto.getCategoryName()));
         place.setAuthor(user);
         place.setLocation(modelMapper.map(placeResponse.getLocationAddressAndGeoDto(), Location.class));
-
+        Optional.ofNullable(place.getOpeningHoursList()).orElse(Collections.emptySet())
+            .forEach(openingHours -> openingHours.setPlace(place));
+        mapMultipartFilesToPhotos(images, place, user);
         return modelMapper.map(placeRepo.save(place), PlaceResponse.class);
+    }
+
+    private void mapMultipartFilesToPhotos(MultipartFile[] images, Place place, User user) {
+        if (images != null && images.length > 0 && images[0] != null) {
+            List<Photo> placePhotos = new ArrayList<>();
+            for (MultipartFile image : images) {
+                if (image != null) {
+                    placePhotos.add(Photo.builder().place(place).name(fileService.upload(image)).user(user).build());
+                }
+            }
+            place.setPhotos(placePhotos);
+        }
     }
 
     private AddPlaceLocation initializeGeoCodingResults(
         List<GeocodingResult> geocodingResults) {
-        GeocodingResult ukrLang = geocodingResults.get(0);
+        GeocodingResult ukrLang = geocodingResults.getFirst();
         GeocodingResult engLang = geocodingResults.get(1);
         return AddPlaceLocation.builder()
             .address(ukrLang.formattedAddress)
@@ -598,5 +601,69 @@ public class PlaceServiceImpl implements PlaceService {
                 .anyMatch(locationId -> locationId.equals(dto.getLocation().getId()));
             dto.setIsFavorite(isFavorite);
         });
+    }
+
+    private List<AdminPlaceDto> createAdminPageableDtoList(Page<Place> places) {
+        return places.stream().map(place -> {
+            AdminPlaceDto adminPlaceDto = modelMapper.map(place, AdminPlaceDto.class);
+            List<String> photoNames = Optional.ofNullable(place.getPhotos())
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(Photo::getName)
+                .collect(Collectors.toList());
+            List<OpenHoursDto> openingHoursList = place.getOpeningHoursList().stream()
+                .map(element -> modelMapper.map(element, OpenHoursDto.class))
+                .toList();
+            adminPlaceDto.setImages(photoNames);
+            adminPlaceDto.setOpeningHoursList(openingHoursList);
+            return adminPlaceDto;
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public PageableDto<SearchPlacesDto> search(Pageable pageable, String searchQuery, Boolean isFavorite, Long userId) {
+        return getSearchPlacesDtoPageableDto(placeRepo.find(pageable, searchQuery, isFavorite, userId));
+    }
+
+    private PageableDto<SearchPlacesDto> getSearchPlacesDtoPageableDto(Page<Place> page) {
+        List<SearchPlacesDto> searchEventsDtos = page.stream()
+            .map(event -> modelMapper.map(event, SearchPlacesDto.class))
+            .toList();
+
+        return new PageableDto<>(
+            searchEventsDtos,
+            page.getTotalElements(),
+            page.getPageable().getPageNumber(),
+            page.getTotalPages());
+    }
+
+    /**
+     * Updates the status of a place, validates the user's existence, and sends a
+     * notification if the status changes to APPROVED or DECLINED.
+     *
+     * @param dto The data transfer object containing place name, user email, and
+     *            the new status.
+     * @return The updated UpdatePlaceStatusWithUserEmailDto.
+     * @throws NotFoundException If the place or user is not found.
+     */
+    @Override
+    public UpdatePlaceStatusWithUserEmailDto updatePlaceStatus(UpdatePlaceStatusWithUserEmailDto dto) {
+        Place place = placeRepo.findByNameIgnoreCase(dto.getPlaceName())
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.PLACE_NOT_FOUND_BY_NAME + dto.getPlaceName()));
+
+        if (userRepo.findByEmail(dto.getEmail()).isEmpty()) {
+            throw new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + dto.getEmail());
+        }
+
+        place.setStatus(dto.getNewStatus());
+        placeRepo.save(place);
+
+        if (dto.getNewStatus() == PlaceStatus.APPROVED || dto.getNewStatus() == PlaceStatus.DECLINED) {
+            restClient.sendEmailNotificationChangesPlaceStatus(dto);
+        }
+        return dto;
     }
 }
